--- a/study_code/b_step_02/css/src/c_12_responsive_test2.css
+++ b/study_code/b_step_02/css/src/c_12_responsive_test2.css
@@ -1,14 +1,15 @@
 @charset "UTF-8";
 /* c_12_responsive_test2.css */
 
-#wrap { width: 100%; height: auto;}
+#wrap { width: 100%; min-width: 320px; height: auto;}
 
 #headBox { 
   position: fixed;
   width: 100%; height: 60px;
-  padding: 5px 10px;
   background-color: #333;
 }
+
+.head_area { width: 100%; max-width: 960px; height: 100%; margin: auto;}
   h1 { 
     float: left;
     background-color: #33b88f;
@@ -19,25 +20,32 @@
     
 
 #viewBox { width: 100%; background-color: #ba7;}
+  .view_area { width: 100%; max-width: 960px; height: 100%; margin: auto;}
 
 #contentBox { 
-  width: 100%; 
+  width: 100%; max-width: 960px;
+  margin: auto;
   padding: 10px;
   background-color: #547d77;
 }
   .title_shape { width: 192px; height: 156px; background-color: #33b88f;}
 
-#infoBox { width: 100%;}
-  .new_area { height: 100%; background-color: #957DE9;}
-  .notice_area {display: none; height: 100%; background-color: #95ABE9;}
-  .more_content {display: none; height: 100%; background-color: #95D2E9;}
+#infoBox { width: 100%; max-width: 960px; margin: auto;}
+  .new_area { float: left; height: 100%; background-color: #957DE9;}
+  .notice_area { float: left; display: none; height: 100%; background-color: #95ABE9;}
+  .more_content { float: left; display: none; height: 100%; background-color: #95D2E9;}
 
 #footBox { width: 100%; background-color: #333;}
-  h2 {display: none;}
+.foot_area { width: 100%; max-width: 960px; height: 100%; margin: auto;}
+  h2 {
+    display: none; 
+    width: 250px; height: 45px;
+    background-color: #33b88f;
+  }
 
 /* ~ 479px */
 @media screen and (max-width: 479px) {
-  #headBox { height: 40px;}
+  #headBox { height: 40px; padding: 5px 10px;}
     h1 { width: 100px; height: 30px;}
     .menu_area { width: 60px; height: 25px;}
       .menu_1 { width: 24px;}
@@ -45,35 +53,51 @@
   #viewBox { height: 480px;}
   #contentBox { height: 480px;}
   #infoBox { height: 480px;}
+    #infoBox > div { width: 100%;}
   #footBox { height: 40px;} 
 } /* ~ 479px =============================================== */
 
 /* 480px ~ 767px */
 @media screen and (min-width: 480px) and (max-width: 767px) {
-  #headBox { }
+  #headBox { padding: 15px; }
     h1 { width: 126px; height: 30px;}
-  #viewBox {}
-  #contentBox {}
-  #infoBox {}
-  #footBox {} 
+    .menu_area { width: 90px; height: 38px;}
+      .menu_1 { width: 36px;}
+      .menu_2 { width: 45px;}
+  #viewBox { height: 720px;}
+  #contentBox { height: 720px;}
+  #infoBox { height: 720px;}
+    #infoBox > div { width: 100%;}
+  #footBox { height: 60px;} 
 } /* 480px ~ 767px ============================================= */
 
 /* 768px ~ 959px */
 @media screen and (min-width: 768px) and (max-width: 959px) {
-  #headBox {}
-  #viewBox {}
-  #contentBox {}
-  #infoBox {}
-  #footBox {} 
+  #headBox { padding: 10px;}
+    h1 { width: 174px; height: 42px;}
+    .menu_area { width: 100px; height: 38px;}
+      .menu_1 { width: 36px;}
+      .menu_2 { width: 45px;}
+  #viewBox { height: 450px;}
+  #contentBox { height: 210px;}
+  #infoBox { height: 540px;}
+    #infoBox > div { display: block; width: calc(100% / 2);}
+  #footBox { height: 120px;} 
 } /* 768px ~ 959px ============================================ */
 
 /* ~ 960px */
 @media screen and (min-width: 960px) {
-  #headBox {}
-  #viewBox {}
-  #contentBox {}
-  #infoBox {}
-  #footBox {} 
+  #headBox { padding: 5px 10px;}
+    h1 { width: 250px; height: 45px;}
+    .menu_area { width: 500px; height: 30px;}
+    .menu_1 { width: 50px;}
+    .menu_2 { width: 430px;}
+  #viewBox { height: 450px;}
+  #contentBox { height: 210px;}
+  #infoBox { height: 540px;}
+    #infoBox > div { display: block; width: calc(100% / 3);}
+  #footBox { height: 120px; padding: 20px;} 
+    h2 {display: block;}
 } /* ~ 960px ================================================== */
 
 
