--- a/study_code/b_step_02/css/c_12_rwd/b_mob_v.css
+++ b/study_code/b_step_02/css/c_12_rwd/b_mob_v.css
@@ -13,7 +13,26 @@
     .unb {width:26px; height:26px;}
 
   /* #viewBox -------------------------------------- */
-  #viewBox{ height: 480px; height:150vw; min-height:480px; padding-top: 40px;}
+  #viewBox{ height: 480px; height:150vw; min-height:480px; 
+    padding-top: 12.5vw;}
+
+  .indicator { 
+    left:auto; right:20px; 
+    width:56px; height:26px; 
+  }
+  .indi_list { display:none;}
+  .indicator p {
+    display: block;
+    width: 100%; height: 100%;
+    border-radius:40px;
+    font-size:1rem; color:var(--color-white); text-align:center;
+    line-height:26px;
+    background-color: var(--color-deepGn); 
+  }
+  .total { font-weight: 700;}
+
+  
+
 
   /* #contentBox -------------------------------------- */
   #contentBox{ height:480px;height:150vw; min-height:480px;}
