--- a/study_code/b_step_02/css/c_12_rwd/e_pc.css
+++ b/study_code/b_step_02/css/c_12_rwd/e_pc.css
@@ -13,7 +13,7 @@
       .gnb_list {
         display:block; position: static;
         width: 100%; height: 100%;
-        padding:0;
+        padding:0;        
       }
       .gnb_list ul {width: 100%; height: 100%;}
       .gnb_list li {
@@ -21,10 +21,7 @@
         text-align: center; line-height:33px;
         margin-bottom: 0;
       }
-      .gnb_list a {
-        padding:0 8px;
-      }
-
+      .gnb_list a { padding:0 8px; }
       .unb {float:right;}
       
   /* #viewBox -------------------------------------- */
