--- a/study_code/b_step_02/css/src/c_13_flex_test.css
+++ b/study_code/b_step_02/css/src/c_13_flex_test.css
@@ -15,6 +15,8 @@ h3 { width: 150px; height: 80px; background-color: #ccc;}
   background-color: #eee;
 }
 .gnb { width: 400px; height: 40px; background-color: #acf;}
+.gnb ul {width: 100%;}
+.gnb li { border: 1px solid #7d7; background-color: #fff;}
 .unb { width: 150px; height: 40px; background-color: #fdd;}
 
 
@@ -29,13 +31,31 @@ h3 { width: 150px; height: 80px; background-color: #ccc;}
   position: absolute; top: 10px; left: 50%; 
   transform: translate(-50%);
 }
+.header_01 .gnb li { float: left; margin-right: 10px;}
+.header_01 .gnb li:last-child { margin-right: 0;}
+
 .header_01 .unb { float: right;}
-/* .header_01 > .navi { float: right;} */
+.header_01 .unb a { 
+  float: left; width: 45px; height: auto;
+  margin-left: 5px; font-size: 0.7rem;
+  background-color: #fff;
+}
+.header_01 .unb a:first-child { float: right;}
+.header_01 .unb a:nth-of-type(2) {margin-left: 0;}
+
 
 /* ---------------------------------------------------------- */
 .header_02 {
   display: flex; justify-content: space-between; align-items: flex-end;
 }
+
+.header_02 .gnb ul { display: flex; justify-content: space-evenly;}
+
+.header_02 .unb { display: flex; justify-content: space-between;}
+.header_02 .unb a { 
+  font-size: 0.7rem; background-color: #fff;
+}
+.header_02 .unb a:nth-of-type(1) { order: 2;}
 
 /* ------------------------------------------------- */
 #wrap .part {
