--- a/study_code/c_layout_01/css/src/b_11_figma_tab.css
+++ b/study_code/c_layout_01/css/src/b_11_figma_tab.css
@@ -94,4 +94,28 @@
     }
     .tab_title_list li:last-child::after {display: none;}
 
-#footBox { width: 100%; height: 450px;}
+    .action {
+      border-radius: 3px;
+      background-color: #1A5D54;
+      color: #fff;
+    }
+
+  .menu_list {
+    width: 100%; height: auto;
+    padding: 30px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+    .menu_list li {
+      width: 240px; height: 350px;
+      margin-right: 26px;
+      margin-bottom: 60px;
+      background-color: #fff;
+    }
+    .menu_list li:nth-child(4n) { margin-right: 0;}
+
+#footBox { 
+  width: 100%; height: 450px;
+  background-color: #171717;
+}
