--- a/study_code/c_layout_01/css/src/b_11_figma_tab.css
+++ b/study_code/c_layout_01/css/src/b_11_figma_tab.css
@@ -1,6 +1,9 @@
 @charset "UTF-8";
 /* b_11_figma_tab.css */
 
+.container { width: 1100px; height: auto; margin:auto;}
+
+/* ----------------------------------------- */
 #wrap {  width: 1440px; height: auto;}
 
 #headBox { 
@@ -46,6 +49,7 @@
         font-size: 16px; color: #171717;
         text-align: center; text-transform: capitalize;
       }
+      .gnb li:nth-child(4) { text-transform: uppercase;}
       .gnb li:last-child{ margin-right: 0; padding-right: 0;}
       .gnb li::after {
         position: absolute; top: 0; right: 0;
@@ -61,7 +65,10 @@
   width: 100%; height: auto;
 
 }
-  .title_area { width: 100%; height: 250px; background-color: #ddd;}
+  .title_area { 
+    width: 100%; height: 250px; background-color: #ddd;
+    padding-top:92px; padding-bottom:17px;
+  }
   .content_area {
     width: 1100px; height: auto; min-height: 900px;
     margin: 155px 170px;
@@ -107,13 +114,50 @@
     justify-content: center;
     flex-wrap: wrap;
   }
-    .menu_list li {
+    .menu_list > li {
       width: 240px; height: 350px;
       margin-right: 26px;
       margin-bottom: 60px;
+      padding: 10px;
       background-color: #fff;
     }
     .menu_list li:nth-child(4n) { margin-right: 0;}
+
+      .menu_item_img { 
+        width: 218px; height: 220px;
+        margin: auto; margin-bottom: 5px;
+        border-radius: 3px;
+        background-color: #ddd;
+      }
+      .menu_item_title {
+        width: 210px; height: 28px;
+        margin: auto; margin-bottom: 6px;
+        border-bottom: 1px solid #757575;
+        font-size: 20px; font-weight: 400;
+        color: #171717;
+        text-indent: 8px;
+        text-transform: capitalize;
+      }
+      .menu_item_detail {
+        width: 190px; height: 40px;
+        margin: auto;
+        font-size: 12px; color: #757575;
+      }
+      .menu_item_feature {
+        width: 200px; height: 22px;
+        padding-left: 10px;
+      }
+      .menu_item_feature > li {
+        float: left;
+        width: auto; height: 22px;
+        margin-right: 5px;
+        padding: 0 5px;
+        border-radius: 3px;
+        border: 1px solid #c4c4c4;
+        font-size: 12px; color: #757575;
+        line-height: 22px;
+      }
+      .feature_ice, .feature_hot, .feature_sale { text-transform: uppercase;}
 
 #footBox { 
   width: 100%; height: 450px;
